Bug 93063 - drm_helper.h:227:1: error: static declaration of ‘pipe_virgl_create_screen’ follows non-static declaration
Summary: drm_helper.h:227:1: error: static declaration of ‘pipe_virgl_create_screen’ f...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-11-22 07:59 UTC by Vinson Lee
Modified: 2015-11-22 11:15 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
[PATCH] virgl: pipe_virgl_create_screen is not static (971 bytes, patch)
2015-11-22 09:19 UTC, Igor Gnatenko
Details | Splinter Review

Description Vinson Lee 2015-11-22 07:59:22 UTC
mesa: 4cff16bc3a84569da05e672c8226931678aa62c0 (master 11.2.0-devel)

  CC       gallium_dri_la-target.lo
In file included from target.c:1:0:
../../../../src/gallium/auxiliary/target-helpers/drm_helper.h:227:1: error: static declaration of ‘pipe_virgl_create_screen’ follows non-static declaration
 pipe_virgl_create_screen(int fd)
 ^
In file included from ../../../../src/gallium/auxiliary/target-helpers/drm_helper.h:6:0,
                 from target.c:1:
../../../../src/gallium/auxiliary/target-helpers/drm_helper_public.h:32:1: note: previous declaration of ‘pipe_virgl_create_screen’ was here
 pipe_virgl_create_screen(int fd);
 ^
Comment 1 Igor Gnatenko 2015-11-22 09:04:02 UTC
I see the same problem.

Full build log: https://kojipkgs.fedoraproject.org//work/tasks/5254/11945254/build.log
Comment 3 Igor Gnatenko 2015-11-22 09:19:29 UTC
Created attachment 120012 [details] [review]
[PATCH] virgl: pipe_virgl_create_screen is not static
Comment 4 Emil Velikov 2015-11-22 11:15:48 UTC
Should be fixed with

commit 05eed0eca71f8c35f315b3b0d7de30f3ff1878b4
Author: Igor Gnatenko <i.gnatenko.brain@gmail.com>
Date:   Sun Nov 22 10:12:09 2015 +0100

    virgl: pipe_virgl_create_screen is not static


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.